xserver-xorg-video-openchrome (1:0.2.904+svn891-1) UNRELEASED; urgency=low

  * New upstream snapshot
    + 859: Fix several typo in code comments
    + 860: Siragon ML-6200 laptop support
    + 861: update VX855 FIFO
    + 862: Fix bug #342 with TV out flickering (Closes: #564688)
    + 873: Replace the deprecated functions with new ones
           Refer to "/xserver/include/os.h"
    + 874: Replace remaining  xalloc to malloc
    + 878: Change maximum line pitch and virtual height according to chipset
    + 883: Update 1024x600 modeline
    + 884: Add workaround for memory autodetection
    + 887: Enable new mode switch and panel support on K8M800 and VM800
    + 888: Merge VX900 branch to add basic VX900 support
    + 889: fix a typo and add a FIXME following the VX900 merge
    + 890: add VX900 to man page
    + 891: Fix type in VIASave

 -- Julien Viard de Galbert <julien@vdg.blogsite.org>  Tue, 21 Dec 2010 16:16:42 +0100

xserver-xorg-video-openchrome (1:0.2.904+svn858-1) experimental; urgency=low

  [ Julien Viard de Galbert ]
  * New upstream snapshot
    + 843: Fix DFP parameter description for the ActiveDevice option
    + 845: set colorkey for 2nd_monitor
    + 846: XVideo support for VX855
      + 853: Revert 2 changes that should not have gone into rev 846
    + 848: Improve 2d performance on chipsets without AGP/PCIe
    + 849: Add option I2CDevices
    + 850: Disable Hardware Clipping for the VX855
    + 851: Re-Enable the VQ for VX800/VX855
    + 852: Disable AGP and DMA by default for VX800 and VX855
    + 854: Fixed freeze on 64bit system for K8M090 chipset
    + 855: Increase bandwidth to handle 1920x1200 resolution with DDR266
    + 856: Fix XV crash on PM800 post VX855 rework
    + 857: ECS P4M800PRO-M2 (V2.0) - reported by Jandré le Roux
      + 858: fix typo in r857

  [ Cyril Brulebois ]
  * Build against Xserver 1.9.1 rc1.
  * Add myself to Uploaders.

 -- Cyril Brulebois <kibi@debian.org>  Tue, 09 Nov 2010 17:08:35 +0100
