@@ -1,24 +1,8 @@
 #!/usr/bin/make -f
 
-PACKAGE = xserver-xorg-video-openchrome
-
-DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
-DEB_HOST_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILDDIR = build
-
-export DH_ALWAYS_EXCLUDE=.la
-
-include debian/xsfbs/xsfbs.mk
-
 DEB_CONFIGURE_EXTRA_FLAGS := \
-	--build=$(DEB_BUILD_GNU_TYPE) \
-	--prefix=/usr \
 	--disable-maintainer-mode \
 	--disable-dependency-tracking
-
-ifneq ($(DEB_BUILD_GNU_TYPE), $(DEB_HOST_GNU_TYPE))
-DEB_CONFIGURE_EXTRA_FLAGS += --host=$(DEB_HOST_GNU_TYPE)
-endif
 
 ifneq (,$(filter debug,$(DEB_BUILD_OPTIONS)))
 DEB_CONFIGURE_EXTRA_FLAGS += \
@@ -26,61 +10,22 @@ DEB_CONFIGURE_EXTRA_FLAGS += \
 	--enable-xv-debug=yes
 endif
 
-.PHONY: build
-build: debian/build-stamp
-debian/build-stamp: $(STAMP_DIR)/patch $(DEB_BUILDDIR)/config.status
-	dh_testdir
-	$(MAKE) -C $(DEB_BUILDDIR)
-	touch $@
+# Configuration:
+override_dh_auto_configure:
+	dh_auto_configure -- $(DEB_CONFIGURE_EXTRA_FLAGS)
 
-.PHONY: install
-install: build
-	dh_testdir
-	dh_testroot
-	$(MAKE) -C $(DEB_BUILDDIR) install DESTDIR=$(CURDIR)/debian/tmp/
-	dh_install debian/tmp/*
+# Install in debian/tmp to retain control through dh_install:
+override_dh_auto_install:
+	dh_auto_install --destdir=debian/tmp
 
-$(DEB_BUILDDIR)/config.status: configure
-	mkdir $(DEB_BUILDDIR)
-	cd $(DEB_BUILDDIR) && ../configure $(DEB_CONFIGURE_EXTRA_FLAGS)
+# Kill *.la files, and forget no-one:
+override_dh_install:
+	find debian/tmp -name '*.la' -delete
+	dh_install --fail-missing
 
-configure:
-	autoreconf -vif
+# That's a plugin, use appropriate warning level:
+override_dh_shlibdeps:
+	dh_shlibdeps -- --warnings=6
 
-.PHONY: clean
-clean: xsfclean
-	dh_testdir
-	dh_testroot
-	dh_clean
-	# remove stuff generated by autogen.sh
-	$(RM) aclocal.m4 compile config.guess config.h.in config.sub \
-		configure depcomp install-sh libxvmc/Makefile.in ltmain.sh \
-		Makefile.in man/Makefile.in man/openchrome.man missing src/Makefile.in
-	$(RM) -r $(DEB_BUILDDIR)
-	$(RM) debian/build-stamp
-
-.PHONY: binary-indep
-binary-indep:
-# we have nothing to do here
-
-.PHONY: binary-arch
-binary-arch: serverabi install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs ChangeLog
-	dh_installdocs NEWS
-	install -D -m 0644 debian/overrides \
-		debian/$(PACKAGE)/usr/share/lintian/overrides/$(PACKAGE)
-	dh_strip
-	dh_link
-	dh_compress
-	dh_fixperms
-	dh_makeshlibs
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-.PHONY: binary
-binary: binary-indep binary-arch
+%:
+	dh $@ --with quilt,autoreconf,xsf --builddirectory=build/
