@@ -1,0 +1,3 @@
+usr/lib/xorg/modules/drivers/*.so
+usr/lib/libchromeXvMC*
+usr/share/man
